2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: applied a patch from Dennis
	Bjorklund that prevents a possible division by zero and fixes the
	calculation of the center point.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-gui.c
	* app/widgets/gimptoolbox.c: use GIMP_ACRONYM.

	* app/main.c (gimp_show_version): use GIMP_NAME.

	* app/about.h (GIMP_LICENSE): s/This program/GIMP/g

2006-02-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: added const qualifier.

2006-02-06  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.c: connect-after to "realize" and
	"size-allocate" signals of the preview area and call the
	set-cursor method from the callback.

	* libgimpwidgets/gimpscrolledpreview.c: no need to explicitely set
	the cursor now that the virtual method is used correctly.

	* libgimp/gimpzoompreview.c: implement set-cursor and set the move
	cursor in accordance with the zoom factor.

2006-02-06  DindinX  <dindinx@gimp.org>

	* plug-ins/common/mblur.c: length should at least be 1, or the zoom
	mode will produce garbage. length==0 is useless in other modes.
	(reported by daelstorm on freenode/#gimp)

2006-02-03  Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/ripple.c: Fixed antialiasing.  Replaced "black"
	with "blank".  Fixes bug #308750

2006-02-03  Carol Spears  <carol@gimp.org>

	* app/tools/gimprectangletool.c: Applied patch from Joao S. O. Bueno
	Calligaris that corrects status bar coordinate display.  Fixes bug 
        #329817

2006-02-04  DindinX  <dindinx@gimp.org>

	* plug-ins/common/pnm.c: untabbified and some other small
	style-related fixes.

2006-02-03  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimprectangletool.c: aspect ratio should be width /
	height.

2006-02-01  Matt Wilson  <msw@gimp.org>

	* plug-ins/common/compressor.c (run): file_{gz,bz2}_save takes 5
	parameters, not 4.  Correct the nparams check in non-interactive
	mode.
