@@ -1,5 +1,11 @@
 2006-02-07  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpscrolledpreview.c
+	(gimp_scrolled_preview_area_event): fixed check that suppresses
+	the redraw for motion events that don't cause the preview to scroll.
+
+2006-02-07  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimprectangletool.c: applied a patch from Dennis
 	Bjorklund that prevents a possible division by zero and fixes the
 	calculation of the center point.
